--- a/craftlib-protocol/build.gradle
+++ b/craftlib-protocol/build.gradle
@@ -3,8 +3,12 @@ description = 'Full Minecraft protocol wrapper'
 dependencies {
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     api 'io.netty:netty-all:4.1.51.Final'
+    api 'net.kyori:adventure-api:4.0.0-SNAPSHOT'
+    api 'net.kyori:adventure-text-serializer-gson:4.0.0-SNAPSHOT'
+    api 'net.kyori:adventure-text-serializer-legacy:4.0.0-SNAPSHOT'
+    api 'com.google.code.gson:gson:2.8.6'
 
-    api project(':craftlib-chat')
+
     api project(':craftlib-nbt')
     api project(':craftlib-commons')
 }
