--- a/craftlib-protocol/build.gradle
+++ b/craftlib-protocol/build.gradle
@@ -1,5 +1,7 @@
+plugins {
+    id "org.jetbrains.kotlin.kapt"
+}
 description = 'Full Minecraft protocol wrapper'
-
 dependencies {
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     api 'io.netty:netty-all:4.1.51.Final'
@@ -8,7 +10,13 @@ dependencies {
     api 'net.kyori:adventure-text-serializer-legacy:4.0.0-SNAPSHOT'
     api 'com.google.code.gson:gson:2.8.6'
 
+    api project(':craftlib-protocol-gen')
+    kapt project(':craftlib-protocol-gen')
 
     api project(':craftlib-nbt')
     api project(':craftlib-commons')
+}
+
+kapt {
+    correctErrorTypes = false
 }
